# solana-accountsdb-plugin-postgres-1

./: Cargo.toml
scripts/: create_schema.sql  drop_schema.sql
src/: accounts_selector.rs  geyser_plugin_postgres.rs  lib.rs  postgres_client.rs
src/postgres_client/: postgres_client_block_metadata.rs  postgres_client_transaction.rs
tests/: test_postgres_plugin.rs
