[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-geyser-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "1.14.10"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.1"
chrono = { version = "0.4.22", features = ["serde"] }
crossbeam-channel = "0.5.6"
itertools = "0.10.5"
log = "0.4.17"
openssl = { version = "0.10.42" }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
solana-geyser-plugin-interface = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-logger = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-measure = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-metrics = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-runtime = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-sdk = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-transaction-status = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
thiserror = "1.0.37"
tokio-postgres = "0.7.7"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"
serial_test = "0.9.0"
socket2 = { version = "0.4.7", features = ["all"] }

solana-account-decoder = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-core = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-local-cluster = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-net-utils = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
solana-streamer = { git = "https://github.com/lijunwangs/solana.git", rev = "2ef4b1356331dfc5f4666428ab65cd7d206e9f32" }
tempfile = "3.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
