[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-geyser-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "1.17.2"
repository = "https://github.com/solana-labs/solana-accountsdb-plugin-postgres"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.1"
chrono = { version = "0.4.24", features = ["serde"] }
crossbeam-channel = "0.5.7"
log = "0.4.17"
openssl = { version = "0.10.42" }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
solana-geyser-plugin-interface =  {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
solana-logger = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
solana-measure = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
solana-metrics = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
solana-program = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
solana-runtime = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
solana-sdk = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
solana-transaction-status = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
thiserror = "1.0.37"
tokio-postgres = "0.7.7"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"
serial_test = "0.9.0"
socket2 = { version = "0.4.7", features = ["all"] }

solana-account-decoder = { version = "1.17.2" }
solana-core = { version = "1.17.2" }
solana-local-cluster = { version = "1.17.2" }
solana-net-utils = { version = "1.17.2" }
solana-streamer = { version = "1.17.2" }
tempfile = "3.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[patch.crates-io]

solana-program = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
solana-zk-token-sdk = {git = "https://github.com/lijunwangs/solana.git", rev = "b70866bb9b04d74dd4dacc18d243846cced874f7"}
